          protected log(Route) method.
        - Directory listings now correctly display a trailing slash for
          directories. Suggested by Aron Roberts.
        - Load only once the accept.properties file used by the 
          TunnelFilter instance.
        - Load only once the agent.properties file used to populate 
          ClientInfo instances.
    - API changes
        - Added client and server RIAP connectors.
          Suggested by John Logsdon and Nirav Shah.
        - Added ClientInfo#getPreferredLanguage(), 
          getPreferredMediaType(), etc. methods.
          Suggested by Jonathan Hall.
        - Uniform has been trimmed to a single handle(Request, Response)
          method and converted to an interface. The other methods have
          been moved to the Client class. The handle(Request) method 
          has been moved to the Restlet class.
        - Context#clientDispatcher and serverDispatcher properties are
          now instances of Client instead of Uniform.
        - Removed the UniformGuard and ChallengeGuard classes. We now
          recommend to directly use Authenticator and Authorizer.
        - Added simpler TemplateRoute, Extractor and Validator filters 
          as an alternative to the single Route class.
        - Deprecated Route in favor of parent and lighter TemplateRoute
          class. In Restlet 2.1, we will reintroduce Route as an 
          abstract parent of TemplateRoute.
        - Renamed SecretDigestVerifier into DigestVerifier.
        - Restricted the role of Metadata class to metadata about
          representations for conneg. 
    - Misc
        - Exceptions thrown in the internal HTTP client are not logged
          with a FINE level instead of a WARNING level.
          
- 2.0 Milestone 3 (2009-05-27)
    - Breaking changes
        - Deprecated ServletConverter and added an equivalent 
          ServletAdapter class to prevent confusion with the 